Updated .env file and made necessary changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,22 @@
-VITE_BACKEND_URL = 'http://localhost:4000'
-VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
+# General Settings
+CURRENCY=INR
+JWT_SECRET=greatstack
+
+# Admin Panel Credentials
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=greatstack123
+
+# MongoDB Setup (required)
+MONGODB_URI=mongodb+srv://mc7801138:45@cluster0.sqcu3.mongodb.net
+
+# Cloudinary Setup (required)
+CLOUDINARY_NAME=df3ypktde
+CLOUDINARY_API_KEY=853984355256755
+CLOUDINARY_SECRET_KEY=ZDjtFjOPI5i-bs80MhZghxEBHT4
+
+# Razorpay Payment Integration
+RAZORPAY_KEY_ID=------ Razorpay Key Id here ------
+RAZORPAY_KEY_SECRET=------ Razorpay Key Secret here ------
+
+# Stripe Payment Integration
+STRIPE_SECRET_KEY=------ Stripe Secret Key here -----
